--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,8 @@
   --accent-color: rgb(248, 82, 5);
   --dark-color: rgb(17, 17, 17);
   --light-color: rgb(221, 217, 217);
-  --contrast-dark-color: rgb(197, 197, 8);
+  --contrast-dark-color-high-opacity: rgba(197, 197, 8, 0.9);
+  --contrast-dark-color-low-opacity: rgba(197, 197, 8, 0.3);
   --dark-color-high-opacity: rgba(17, 17, 17, 0.9);
   --dark-color-low-opacity: rgba(17, 17, 17, 0.3);
 }
@@ -56,6 +57,7 @@ footer {
 
 /* header */
 header {
+  position: fixed;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -63,6 +65,7 @@ header {
 
 .menu-list {
   background-color: var(--dark-color-low-opacity);
+  backdrop-filter: blur(5px);
   padding: 5px 0 5px 0;
   display: flex;
   flex-direction: row;
@@ -79,21 +82,6 @@ header {
 
 .logo img {
   height: 50px;
-}
-
-/* article */
-article {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-}
-
-.claim,
-.subclaim {
-  color: var(--dark-color);
-  background-color: var(--contrast-dark-color);
 }
 
 /* footer */
@@ -122,9 +110,55 @@ footer {
 
 .footer-widget p {
   margin: 0 0 1rem 0;
+  text-align: end;
 }
 
 .footer-widget__phones {
   display: flex;
   flex-direction: column;
+}
+
+/* article */
+article {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.claim,
+.subclaim {
+  color: var(--dark-color);
+  background-color: var(--contrast-dark-color-high-opacity);
+}
+
+#page-welcome {
+  margin-top: 100px;
+}
+/* Responsive stuff */
+@media screen and (min-width: 620px) {
+  footer {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .footer-widget {
+    flex-direction: column;
+  }
+
+  .menu-list {
+    gap: 30px;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  footer {
+    justify-content: space-around;
+    gap: 50px;
+  }
+
+  .menu-list {
+    gap: 60px;
+  }
 }
