--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@
   --dark-color-high-opacity: rgba(17, 17, 17, 0.9);
   --dark-color-low-opacity: rgba(17, 17, 17, 0.3);
   --height-images-services: 300px;
+  --gray-color-high-opacity: rgba(133, 132, 132, 0.8);
 }
 
 * {
@@ -62,6 +63,7 @@ header {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  z-index: 1;
 }
 
 .menu-list {
@@ -120,19 +122,53 @@ footer {
 
 /* article */
 article {
-  flex-grow: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+  position: relative;
 }
 
 .claim,
 .subclaim {
   color: var(--dark-color);
-  background-color: rgba(133, 132, 132, 0.8);
+  background-color: var(--gray-color-high-opacity);
 }
 
+.services-titles__group {
+  text-align: center;
+  margin: 20px 0;
+}
+
+.services-title {
+  background-color: var(--contrast-dark-color-high-opacity);
+  color: var(--dark-color);
+  margin: 0;
+}
+
+.services-subtitle {
+  background-color: var(--gray-color-high-opacity);
+  color: var(--dark-color);
+  margin: 0;
+}
+
+.slideButton {
+  position: absolute;
+  top: 35%;
+  transform: translateY(-50%);
+  font-size: 4rem;
+  cursor: pointer;
+  color: var(--accent-color);
+}
+
+.prevSlide {
+  left: 0.5rem;
+}
+
+.nextSlide {
+  right: 0.5rem;
+}
+/*----->Welcome page<-----*/
 #page-welcome {
   margin-top: 60px;
 }
