--- a/css/main.css
+++ b/css/main.css
@@ -127,12 +127,13 @@ article {
   justify-content: center;
   align-items: flex-start;
   position: relative;
+  background-color: var(--dark-color-high-opacity);
 }
 
 .claim,
 .subclaim {
-  color: var(--dark-color);
-  background-color: var(--gray-color-high-opacity);
+  color: var(--light-color);
+  /* background-color: var(--gray-color-high-opacity);*/
 }
 
 .services-titles__group {
@@ -141,8 +142,8 @@ article {
 }
 
 .services-title {
-  background-color: var(--contrast-dark-color-high-opacity);
-  color: var(--dark-color);
+  /* background-color: var(--contrast-dark-color-high-opacity);*/
+  color: var(--contrast-dark-color-high-opacity);
   margin: 0;
 }
 
