--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,15 +1,17 @@
 :root {
   --max-width: 1280px;
   --min-width: 320px;
-  --accent-color: rgb(248, 82, 5);
+  --height-images-services: 300px;
+  --accent-color: rgb(232, 99, 10);
   --dark-color: rgb(17, 17, 17);
   --light-color: rgb(221, 217, 217);
-  --contrast-dark-color-high-opacity: rgba(197, 197, 8, 0.9);
-  --contrast-dark-color-low-opacity: rgba(197, 197, 8, 0.3);
+  --contrast-dark-color: rgb(252, 217, 0);
+  --contrast-dark-color-high-opacity: rgba(252, 217, 0, 0.9);
   --dark-color-high-opacity: rgba(17, 17, 17, 0.9);
   --dark-color-low-opacity: rgba(17, 17, 17, 0.3);
-  --height-images-services: 300px;
-  --gray-color-high-opacity: rgba(133, 132, 132, 0.8);
+  --color-second: rgb(3, 83, 151);
+  --color-second-low-opacity: rgba(3, 83, 151, 0.2);
+  --color-first: rgb(0, 30, 108);
 }
 
 * {
@@ -67,7 +69,7 @@ header {
 }
 
 .menu-list {
-  background-color: var(--dark-color-low-opacity);
+  background-color: var(--color-second-low-opacity);
   backdrop-filter: blur(5px);
   padding: 5px 0 5px 0;
   display: flex;
@@ -133,7 +135,6 @@ article {
 .claim,
 .subclaim {
   color: var(--light-color);
-  /* background-color: var(--gray-color-high-opacity);*/
 }
 
 .services-titles__group {
@@ -142,14 +143,13 @@ article {
 }
 
 .services-title {
-  /* background-color: var(--contrast-dark-color-high-opacity);*/
-  color: var(--contrast-dark-color-high-opacity);
+  color: var(--contrast-dark-color);
   margin: 0;
 }
 
 .services-subtitle {
-  background-color: var(--gray-color-high-opacity);
-  color: var(--dark-color);
+  background-color: var(--color-second);
+  color: var(--contrast-dark-color);
   margin: 0;
 }
 
