--- a/src/css/main.css
+++ b/src/css/main.css
@@ -161,19 +161,19 @@ article {
 
 .slideButton {
   position: absolute;
-  top: 35%;
+  top: 50%;
   transform: translateY(-50%);
-  font-size: 4rem;
+  font-size: 2.5rem;
   cursor: pointer;
   color: var(--accent-color);
 }
 
 .prevSlide {
-  left: 0.5rem;
+  left: 0.01rem;
 }
 
 .nextSlide {
-  right: 0.5rem;
+  right: 0.01rem;
 }
 
 /*-------------------->PAINTING<-------------------*/
@@ -199,6 +199,21 @@ article {
 .services-soldering__item {
   height: var(--height-images-services);
   background-image: url(../../multimedia/soldering/pexels-pixabay-73833.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  transition: background-image 0.7s ease-in-out;
+  margin: 10px;
+}
+
+/*-------------------->DESIGN A<-------------------*/
+.services-design-a {
+  position: relative;
+}
+
+.services-design-a__item {
+  height: var(--height-images-services);
+  background-image: url(../../multimedia/design/Diseño\ y\ levantamiento\ de\ estructuras/CARRETA/CARRETA-1.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
