update background image url with new file name

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -213,7 +213,7 @@ article {
 
 .services-design-a__item {
   height: var(--height-images-services);
-  background-image: url(../../multimedia/design/Diseño\ y\ levantamiento\ de\ estructuras/CARRETA/CARRETA-1.png);
+  background-image: url(../../multimedia/design/a/1.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
