solve error with first painting image with new name

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -183,7 +183,7 @@ article {
 
 .services-painting__item {
   height: var(--height-images-services);
-  background-image: url(../../multimedia/painting/montacargas-despues-01.jpg);
+  background-image: url(../../multimedia/painting/1.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
