styled waterproofing in services block

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -206,6 +206,21 @@ article {
   margin: 10px;
 }
 
+/*-------------------->WATERPROOFING<-------------------*/
+.services-waterproofing {
+  position: relative;
+}
+
+.services-waterproofing__item {
+  height: var(--height-images-services);
+  background-image: url(../../multimedia/waterproofing/1.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  transition: background-image 0.7s ease-in-out;
+  margin: 10px;
+}
+
 /*-------------------->DESIGN A<-------------------*/
 .services-design-a {
   position: relative;
