update painting image url into background according to name changed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -198,7 +198,7 @@ article {
 
 .services-soldering__item {
   height: var(--height-images-services);
-  background-image: url(../../multimedia/soldering/pexels-pixabay-73833.jpg);
+  background-image: url(../../multimedia/soldering/1.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
