--- a/src/css/main.css
+++ b/src/css/main.css
@@ -49,7 +49,7 @@ article,
 footer {
   width: 100%;
   margin: 0 auto;
-  padding: 1rem;
+  padding: 0 1rem;
   max-width: var(--max-width);
 }
 
@@ -125,8 +125,6 @@ footer {
 article {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
   background-color: var(--dark-color-low-opacity);
 }
 
@@ -135,9 +133,20 @@ article {
   color: var(--light-color);
 }
 
+.claim {
+  margin: 0 0 30px 0;
+  font-size: x-large;
+}
+
 /*----->Welcome page<-----*/
 #page-welcome {
   margin-top: 60px;
+}
+
+.welcome-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /*----------->SERVICES<------------*/
