--- a/src/css/main.css
+++ b/src/css/main.css
@@ -148,6 +148,7 @@ article {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
 }
 
 /*----------->SERVICES<------------*/
