change name of image file according to new name

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -236,17 +236,17 @@ article {
 
 /*-------------------->CLEANING<-------------------*/
 .services-cleaning__item {
-  background-image: url(../../multimedia/cleaning/1.webp);
+  background-image: url(../../multimedia/cleaning/1.png);
 }
 
 /*-------------------->DESIGN A<-------------------*/
 .services-design-a__item {
-  background-image: url(../../multimedia/design/a/1.png);
+  background-image: url(../../multimedia/design/a/1.jpg);
 }
 
 /*-------------------->DESIGN B<-------------------*/
 .services-design-b__item {
-  background-image: url(../../multimedia/design/b/1.png);
+  background-image: url(../../multimedia/design/b/1.jpg);
 }
 
 /*-------------------->DESIGN C<-------------------*/
